kubernetes/microblog-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: microblog
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - name: microblog
        image: zero2k/microblog:kubernetes
        ports:
          - containerPort: 5000
        livenessProbe:
            httpGet:
                path: /
                port: 5000
